force-app/main/default/objects/E2CP__Widespread_Issue_Communication__c/E2CP__Widespread_Issue_Communication__c.object-meta.xml
<CustomObject>
    <description>Message sent to Case Owners and/or Customers affected by the Widespread Issue.</description>
    <label>Widespread Issue Communication</label>
    <nameField>
        <displayFormat>WSIC-{00000000}</displayFormat>
        <label>Widespread Issue Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widespread Issue Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>