force-app/main/default/objects/E2CP__Widespread_Issue_Communication__c/fields/E2CP__Message_Body__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Message_Body__c</fullName>
    <description>Comment used in the Widespread Issue communication</description>
    <label>Message Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>