force-app/main/default/objects/E2CP__Widespread_Issue_Communication__c/fields/E2CP__Widespread_Issue__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Widespread_Issue__c</fullName>
    <description>Widespread Issue number related to this Communication</description>
    <label>Widespread Issue</label>
    <referenceTo>E2CP__Widespread_Issue__c</referenceTo>
    <relationshipLabel>Widespread Issue Communications</relationshipLabel>
    <relationshipName>Widespread_Issue_Communications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>